# Navy

./: .env.example  .gitignore  config.yaml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.claude/: launch.json
api/: auth.py  deps.py  server.py
api/routes/: config.py  export.py  jobs.py  runs.py
navy/: __main__.py  config.py  main.py  models.py
navy/enrichment/: company_enricher.py  crunchbase.py  linkedin_company.py
navy/filtering/: engine.py
navy/output/: report.py  telegram.py
navy/scoring/: ai_scorer.py
navy/scraper/: http_client.py  linkedin_detail.py  linkedin_search.py
navy/storage/: db.py
web/: .npmrc  next.config.ts  package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/jobs/: page.tsx
web/src/app/runs/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: run-dialog.tsx  score-badge.tsx  sidebar.tsx  telegram-button.tsx
web/src/lib/: api.ts
